samples/_failures_safe/1761321360_0e93f7_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f8c3029f.c: In function ‘display_warnings’:
./samples/SAFE/__tmp_f8c3029f.c:131:20: error: missing terminating " character
  131 |             printf("%s %s %s\n
      |                    ^~~~~~~~~~~
./samples/SAFE/__tmp_f8c3029f.c:131:13: error: expected expression at end of input
  131 |             printf("%s %s %s\n
      |             ^~~~~~
./samples/SAFE/__tmp_f8c3029f.c:131:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_f8c3029f.c:131:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_f8c3029f.c:131:13: error: expected declaration or statement at end of input
